# cognitive-observability-AI-agent-for-mcp

./: .gitignore  DRAFT_README.md  Installation.md  README.md  REPORT_GENERATION_COMMANDS.md  docker-compose.observability.yml  final_clean_report.html  prometheus.yml  pyproject.toml  quick_log.py
cognitive-agent/: README.md  package-lock.json  package.json  tsconfig.json
cognitive-agent/src/: cli.ts
cognitive-agent/src/core/: cognitive-analyzer.ts  dashboard.ts  enterprise-integrations.ts  global-agent.ts  host-discovery.ts  universal-proxy.ts
cognitive-agent/src/utils/: logger.ts
docs/: CURSOR_INSTALLATION_GUIDE.md  Complete_Observability_Reports.md  Component_Trace_Reports.md  IMPLEMENTATION_SUMMARY.md  MASTARA_TESTING_GUIDE.md  README.md  Usability_Analysis_Reports.md  agent_vs_extension_strategy.md  architecture.md  old_architecture.md  pitch_deck.md  universal_usability_agent_plugin.md
docs/mcp_host_adapter/: cursor_adapter.md
knowledge_base/: cognitive_observability_explained.py  mcp_components_explained.py  observation_architecture_explained.py  observation_lifecycle_explained.py  plugin_vs_agent_explained.py
mcp_audit/: __init__.py  __main__.py  cli.py  draft_ENHANCED_FEATURES_SUMMARY.md  draft_FINAL_VALIDATION_SUMMARY.md  draft_latest_commands_list.md
mcp_audit/adapters/: base.py  cursor.py  enhanced_cursor_adapter.py
mcp_audit/analyzers/: cognitive_analyzer.py
mcp_audit/cli_support/: __init__.py  html_generators.py  report_handlers.py  utils.py
mcp_audit/core/: audit_agent.py  config.py  models.py
mcp_audit/daemon/: __init__.py  audit_daemon.py
mcp_audit/dashboard/: __init__.py  app.py
mcp_audit/docs/: Q&A.md  cognitive_observability_agent.md  draft_ADD_TO_READMEmd  draft_analytics_platform_for_mcp.md
mcp_audit/docs/reports/: detailed-report.md  usability-report.md
mcp_audit/generators/: report_generator.py
mcp_audit/integrations/: __init__.py  base.py  langsmith.py  manager.py  mixpanel.py  opentelemetry.py  posthog.py
mcp_audit/interceptors/: conversation_interceptor.py  cursor_conversation_capture.py  enhanced_conversation_correlator.py  enhanced_mcp_proxy.py  live_interceptor.py  llm_decision_interceptor.py  mcp_interceptor.py  mcp_proxy.py  mcp_proxy_runner.py  user_prompt_capture.py
mcp_audit/tracing/: __init__.py  collector.py  message_converter.py  models.py  timeline_analyzer.py  visualizer.py
mcp_audit/utils/: fix_recursive_config.py
scripts/: reset_data.sh  uninstall_cursor_agent.sh
